# rdf-splitter

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: docs.yml  publish-crates.yml  publish-docker.yml
src/: cli.rs  format.rs  inputs.rs  main.rs  serialise.rs  splitter.rs
tests/: integration.rs
tests/fixtures/: small.jsonld  small.nq  small.nt  small.rdf  small.trig  small.ttl
tests/fixtures/subdir/: sub.nt
