[package]
name = "rdfsplitter"
version = "0.1.0"
edition = "2021"
authors = ["rdfsplitter contributors"]
description = "Split large RDF files (Turtle, N-Triples, RDF/XML, JSON-LD, …) into smaller chunks"
license = "MIT"
repository = "https://github.com/matdata-eu/rdf-splitter"
homepage = "https://github.com/matdata-eu/rdf-splitter"
documentation = "https://docs.rs/rdf-splitter"
keywords = ["rdf", "turtle", "n-triples", "linked-data", "cli"]
categories = ["command-line-utilities", "parsing"]
readme = "README.md"
exclude = ["/.github", "/tests/fixtures"]

[[bin]]
name = "rdfsplitter"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive", "env"] }

# RDF parsing / serialisation
rio_api = "0.8"
rio_turtle = "0.8"
rio_xml = "0.8"
oxiri = "0.2"

# JSON-LD structural parse (serde_json walker – no async runtime needed)
serde_json = "1"

# Glob / wildcard expansion
glob = "0.3"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
log = "0.4"
env_logger = "0.11"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
